Colab을 통해 생성됨

--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -2,81 +2,30 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 49,
-          "referenced_widgets": [
-            "37c282bf4a4740579b07503590c9a19a",
-            "c74fc008bc4d4acc9d3f57ba3459451c",
-            "abd78f8d8d3545c58e2bcea310455131",
-            "38375d738a954f609c32c717562e0987",
-            "aa07417c7ca4425792ce1c17d60b7cb6",
-            "6e5ddf63d05b4e789551822d299c51b8",
-            "76fe7883f0024891b34a0e797c0ebd7f",
-            "97f265d8974f4134b6a7f5ec90f91179",
-            "99de5afca47f44ffb148d54e4428a950",
-            "21686edae9af4a6e94989c80148bdc32",
-            "fa80b30fb02c44a69b55a1ad032f0418"
-          ]
-        },
-        "id": "1SWSTdXwsn5q",
-        "outputId": "43e4c6fc-4919-46f2-dae8-1ff036af73da"
+        "id": "1SWSTdXwsn5q"
       },
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "  0%|          | 0/100 [00:00<?, ?it/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "37c282bf4a4740579b07503590c9a19a"
-            }
-          },
-          "metadata": {}
-        }
-      ],
+      "outputs": [],
       "source": [
         "# @markdown # Step 1: Install all neccessary packages\n",
         "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
-        "#Download pymol in colabsystem\n",
-        "from IPython.utils import io\n",
-        "import tqdm.notebook\n",
-        "import os\n",
-        "\"\"\"The PyMOL installation is done inside two nested context managers. This approach\n",
-        "was inspired by Dr. Christopher Schlicksup's (of the Phenix group at\n",
-        "Lawrence Berkeley National Laboratory) method for installing cctbx\n",
-        "in a Colab Notebook. He presented his work on September 1, 2021 at the IUCr\n",
-        "Crystallographic Computing School. I adapted Chris's approach here. It replaces my first approach\n",
-        "that requires seven steps. My approach was presentated at the SciPy2021 conference\n",
-        "in July 2021 and published in the\n",
-        "[proceedings](http://conference.scipy.org/proceedings/scipy2021/blaine_mooers.html).\n",
-        "The new approach is easier for beginners to use. The old approach is easier to debug\n",
-        "and could be used as a back-up approach.\n",
+        "# Install all necessary packages\n",
+        "!pip install biopython\n",
+        "!pip install --upgrade tqdm\n",
+        "!pip install -q condacolab\n",
+        "import condacolab\n",
+        "condacolab.install()\n",
         "\n",
-        "\"\"\"\n",
-        "total = 100\n",
-        "with tqdm.notebook.tqdm(total=total) as pbar:\n",
-        "    with io.capture_output() as captured:\n",
+        "# Install PyMOL using Conda\n",
+        "!mamba install -c conda-forge pymol-open-source -y\n",
         "\n",
-        "        !pip install -q condacolab\n",
-        "        import condacolab\n",
-        "        condacolab.install()\n",
-        "        pbar.update(10)\n",
-        "\n",
-        "        import sys\n",
-        "        sys.path.append('/usr/local/lib/python3.7/site-packages/')\n",
-        "        pbar.update(20)\n",
-        "\n",
-        "        # Install PyMOL\n",
-        "        %shell mamba install -c schrodinger pymol-bundle --yes\n",
-        "\n",
-        "        pbar.update(90)"
+        "# Import necessary modules\n",
+        "from Bio.PDB import PDBParser, Selection, NeighborSearch\n",
+        "from Bio.PDB.Polypeptide import is_aa\n",
+        "from tqdm import tqdm\n",
+        "import torch"
       ]
     },
     {
@@ -124,7 +73,7 @@
         },
         "outputId": "abbf3ac7-0059-4d2b-f1b8-fada2dafc6f8"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,352 +1003,6 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "widgets": {
-      "application/vnd.jupyter.widget-state+json": {
-        "37c282bf4a4740579b07503590c9a19a": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HBoxModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HBoxModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HBoxView",
-            "box_style": "",
-            "children": [
-              "IPY_MODEL_c74fc008bc4d4acc9d3f57ba3459451c",
-              "IPY_MODEL_abd78f8d8d3545c58e2bcea310455131",
-              "IPY_MODEL_38375d738a954f609c32c717562e0987"
-            ],
-            "layout": "IPY_MODEL_aa07417c7ca4425792ce1c17d60b7cb6"
-          }
-        },
-        "c74fc008bc4d4acc9d3f57ba3459451c": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_6e5ddf63d05b4e789551822d299c51b8",
-            "placeholder": "​",
-            "style": "IPY_MODEL_76fe7883f0024891b34a0e797c0ebd7f",
-            "value": ""
-          }
-        },
-        "abd78f8d8d3545c58e2bcea310455131": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "FloatProgressModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "FloatProgressModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "ProgressView",
-            "bar_style": "success",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_97f265d8974f4134b6a7f5ec90f91179",
-            "max": 100,
-            "min": 0,
-            "orientation": "horizontal",
-            "style": "IPY_MODEL_99de5afca47f44ffb148d54e4428a950",
-            "value": 100
-          }
-        },
-        "38375d738a954f609c32c717562e0987": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "HTMLModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_dom_classes": [],
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "HTMLModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/controls",
-            "_view_module_version": "1.5.0",
-            "_view_name": "HTMLView",
-            "description": "",
-            "description_tooltip": null,
-            "layout": "IPY_MODEL_21686edae9af4a6e94989c80148bdc32",
-            "placeholder": "​",
-            "style": "IPY_MODEL_fa80b30fb02c44a69b55a1ad032f0418",
-            "value": " 120/? [00:51&lt;00:00,  2.43it/s]"
-          }
-        },
-        "aa07417c7ca4425792ce1c17d60b7cb6": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "6e5ddf63d05b4e789551822d299c51b8": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "76fe7883f0024891b34a0e797c0ebd7f": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        },
-        "97f265d8974f4134b6a7f5ec90f91179": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "99de5afca47f44ffb148d54e4428a950": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "ProgressStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "ProgressStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "bar_color": null,
-            "description_width": ""
-          }
-        },
-        "21686edae9af4a6e94989c80148bdc32": {
-          "model_module": "@jupyter-widgets/base",
-          "model_name": "LayoutModel",
-          "model_module_version": "1.2.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/base",
-            "_model_module_version": "1.2.0",
-            "_model_name": "LayoutModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "LayoutView",
-            "align_content": null,
-            "align_items": null,
-            "align_self": null,
-            "border": null,
-            "bottom": null,
-            "display": null,
-            "flex": null,
-            "flex_flow": null,
-            "grid_area": null,
-            "grid_auto_columns": null,
-            "grid_auto_flow": null,
-            "grid_auto_rows": null,
-            "grid_column": null,
-            "grid_gap": null,
-            "grid_row": null,
-            "grid_template_areas": null,
-            "grid_template_columns": null,
-            "grid_template_rows": null,
-            "height": null,
-            "justify_content": null,
-            "justify_items": null,
-            "left": null,
-            "margin": null,
-            "max_height": null,
-            "max_width": null,
-            "min_height": null,
-            "min_width": null,
-            "object_fit": null,
-            "object_position": null,
-            "order": null,
-            "overflow": null,
-            "overflow_x": null,
-            "overflow_y": null,
-            "padding": null,
-            "right": null,
-            "top": null,
-            "visibility": null,
-            "width": null
-          }
-        },
-        "fa80b30fb02c44a69b55a1ad032f0418": {
-          "model_module": "@jupyter-widgets/controls",
-          "model_name": "DescriptionStyleModel",
-          "model_module_version": "1.5.0",
-          "state": {
-            "_model_module": "@jupyter-widgets/controls",
-            "_model_module_version": "1.5.0",
-            "_model_name": "DescriptionStyleModel",
-            "_view_count": null,
-            "_view_module": "@jupyter-widgets/base",
-            "_view_module_version": "1.2.0",
-            "_view_name": "StyleView",
-            "description_width": ""
-          }
-        }
-      }
     }
   },
   "nbformat": 4,
