Colab을 통해 생성됨

--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -2,31 +2,86 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# @markdown # Step 1A: install Conda in Colab\n",
+        "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
+        "!pip -q install -U condacolab\n",
+        "import condacolab\n",
+        "condacolab.install()"
+      ],
       "metadata": {
         "cellView": "form",
-        "id": "1SWSTdXwsn5q"
+        "id": "YPFCSbYcJOsI"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "# @markdown # Step 1: Install all neccessary packages\n",
-        "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
-        "# Install all necessary packages\n",
-        "!pip install biopython\n",
-        "!pip install --upgrade tqdm\n",
-        "!pip install -q condacolab\n",
-        "import condacolab\n",
-        "condacolab.install()\n",
+        "# @markdown # Step 1B: Match your environment to Colab’s Python (3.12)\n",
         "\n",
-        "# Install PyMOL using Conda\n",
-        "!mamba install -c conda-forge pymol-open-source -y\n",
+        "import os, sys\n",
         "\n",
-        "# Import necessary modules\n",
+        "# 1) Remove any existing pin file (it can force the wrong Python)\n",
+        "pin_file = \"/usr/local/conda-meta/pinned\"\n",
+        "if os.path.exists(pin_file):\n",
+        "    os.remove(pin_file)\n",
+        "\n",
+        "# 2) Make Conda's base match the running kernel (3.12) and install deps\n",
+        "!mamba install -y -c conda-forge \"python=3.12\" \"pymol-open-source=3.1.0=py312*\" biopython tqdm\n",
+        "\n",
+        "# 3) Quick smoke test\n",
+        "print(\"Python:\", sys.version.split()[0])\n",
+        "try:\n",
+        "    import Bio, tqdm\n",
+        "    print(\"Biopython:\", Bio.__version__, \"| tqdm:\", tqdm.__version__)\n",
+        "except Exception as e:\n",
+        "    print(\"Biopython/tqdm import error:\", e)\n",
+        "\n",
+        "try:\n",
+        "    import pymol\n",
+        "    pymol.finish_launching(['pymol','-cq'])\n",
+        "    from pymol import cmd\n",
+        "    print(\"PyMOL OK. Version:\", cmd.get_version())\n",
+        "except Exception as e:\n",
+        "    print(\"PyMOL import/launch error:\", e)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "IBXYqLhBHmVp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown # Step 1C: Install all neccessary packages\n",
         "from Bio.PDB import PDBParser, Selection, NeighborSearch\n",
         "from Bio.PDB.Polypeptide import is_aa\n",
         "from tqdm import tqdm\n",
-        "import torch"
-      ]
+        "\n",
+        "# Optional: PyMOL headless (only if you need cmd)\n",
+        "try:\n",
+        "    import pymol\n",
+        "    pymol.finish_launching(['pymol','-cq'])\n",
+        "    from pymol import cmd\n",
+        "except Exception as e:\n",
+        "    print(\"PyMOL not available yet:\", e)\n",
+        "\n",
+        "# Optional: Torch\n",
+        "try:\n",
+        "    import torch\n",
+        "except ImportError:\n",
+        "    print(\"torch not found. Install with: pip install torch  (or: mamba install -y -c pytorch pytorch)\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "HGNke-geJZd2"
+      },
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -71,27 +126,54 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "abbf3ac7-0059-4d2b-f1b8-fada2dafc6f8"
+        "outputId": "d9321f4d-9416-4a5f-aea3-faf1b1241b8d"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "✅ Processed: 8hxe.pdb\n"
+            "✅ Processed: 3tis.pdb\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "lPrIazJuxjnp",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "e16a4694-b7e2-4a0c-8840-350b3f8a8dbd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/5.xlsx\n",
+            "✅ Thresholds downloaded successfully to /content/thresholds.xlsx\n",
+            "⚙️ Loading thresholds...\n",
+            "📊 Thresholds loaded:\n",
+            "  - alpha_distance_range: Min=5.1, Max=10.1\n",
+            "  - beta_distance_range: Min=3.8, Max=8.9\n",
+            "  - ratio_threshold_range: Min=0.9, Max=1.6\n",
+            "  - pie_threshold_range: Min=0.0, Max=25.0\n",
+            "\n",
+            "--- Starting Batch Processing with KDTree Pre-filtering ---\n",
+            "Found 1 PDB files in /content/cleaned\n",
+            "🚀 Starting parallel processing with 6 workers...\n",
+            "🔄 Processing: 3tis.pdb\n",
+            "✅ Finished: 3tis.pdb (Saved: 1 triads)\n",
+            "\n",
+            "🎉 All processing finished.\n"
+          ]
+        }
+      ],
       "source": [
         "# @markdown # Step 3A: Filter using geometric parameters (Containing all metal ligating residue)\n",
         "\n",
@@ -335,7 +417,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "cellView": "form",
         "id": "OmyrAVvhfbQl"
@@ -347,9 +429,9 @@
         "import numpy as np\n",
         "from Bio.PDB import PDBParser\n",
         "\n",
-        "Result1_excel_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp/3\" # @param {type:\"string\"}\n",
-        "Target_pdb_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp\"    # @param {type:\"string\"}\n",
-        "Coordinate_excel_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp/3/coordinate\"  # @param {type:\"string\"}\n",
+        "Result1_excel_directory = \"/content/\" # @param {type:\"string\"}\n",
+        "Target_pdb_directory = \"/content/cleaned\"    # @param {type:\"string\"}\n",
+        "Coordinate_excel_directory = \"/content/coordinate\"  # @param {type:\"string\"}\n",
         "\n",
         "os.makedirs(Coordinate_excel_directory, exist_ok=True)\n",
         "\n",
@@ -444,9 +526,9 @@
         "# --- Configuration and Setup ---\n",
         "# Define base directories (MODIFY THESE PATHS IF NEEDED)\n",
         "# Using the paths from your last provided code\n",
-        "Coordinate_excel_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp/3/coordinate\" # @param {type:\"string\"}\n",
-        "Target_pdb_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp\"                    # @param {type:\"string\"}\n",
-        "Result_2_excel_directory = \"/content/drive/MyDrive/250501_Final/2His_1Asp/3/coordinate/result\" # @param {type:\"string\"}\n",
+        "Coordinate_excel_directory = \"/content/coordinate\" # @param {type:\"string\"}\n",
+        "Target_pdb_directory = \"/content/cleaned\"                    # @param {type:\"string\"}\n",
+        "Result_2_excel_directory = \"/content/result/\" # @param {type:\"string\"}\n",
         "\n",
         "# Check if base directories exist\n",
         "if not os.path.exists(Coordinate_excel_directory):\n",
@@ -944,7 +1026,7 @@
         "# @markdown # Step 5: Analyze output\n",
         "\n",
         "# Load input file\n",
-        "input_file_path = \"/content/drive/MyDrive/Benchmark_Final/Mn_2His_1Asp_1/1ips_result.xlsx\" # @param {type:\"string\"}\n",
+        "input_file_path = \"/content/result/\" # @param {type:\"string\"}\n",
         "df_new = pd.read_excel(input_file_path)\n",
         "\n",
         "# Generate PyMOL script file\n",
