--- a/Metal_Finder.ipynb
+++ b/Metal_Finder.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# @markdown # Step 1A: install Conda in Colab\n",
+        "# @markdown # Step 1A: Install Conda in Colab\n",
         "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
         "!pip -q install -U condacolab\n",
         "import condacolab\n",
@@ -11,10 +11,27 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "YPFCSbYcJOsI"
+        "id": "YPFCSbYcJOsI",
+        "outputId": "cca4a086-9e03-4b02-dc6b-a87b29c60a38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⏬ Downloading https://github.com/jaimergp/miniforge/releases/download/24.11.2-1_colab/Miniforge3-colab-24.11.2-1_colab-Linux-x86_64.sh...\n",
+            "📦 Installing...\n",
+            "📌 Adjusting configuration...\n",
+            "🩹 Patching environment...\n",
+            "⏲ Done in 0:00:07\n",
+            "🔁 Restarting kernel...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,30 +139,18 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "nuukHJoFHl4G",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "d9321f4d-9416-4a5f-aea3-faf1b1241b8d"
+        "id": "nuukHJoFHl4G"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Processed: 3tis.pdb\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 7,
       "metadata": {
         "id": "lPrIazJuxjnp",
         "cellView": "form",
-        "outputId": "e16a4694-b7e2-4a0c-8840-350b3f8a8dbd",
+        "outputId": "5927012e-373b-490e-d269-4f0a38f6ae18",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -155,20 +160,82 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/5.xlsx\n",
-            "✅ Thresholds downloaded successfully to /content/thresholds.xlsx\n",
+            "⬇️ Downloading thresholds from: https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold/Cu/2His_1Cys_only_for_Cu/4.xlsx\n",
+            "✅ Thresholds downloaded successfully to /content/result/thresholds.xlsx\n",
             "⚙️ Loading thresholds...\n",
             "📊 Thresholds loaded:\n",
-            "  - alpha_distance_range: Min=5.1, Max=10.1\n",
-            "  - beta_distance_range: Min=3.8, Max=8.9\n",
-            "  - ratio_threshold_range: Min=0.9, Max=1.6\n",
-            "  - pie_threshold_range: Min=0.0, Max=25.0\n",
+            "  - alpha_distance_range: Min=5.1, Max=9.5\n",
+            "  - beta_distance_range: Min=3.8, Max=7.5\n",
+            "  - ratio_threshold_range: Min=0.9, Max=1.5\n",
+            "  - pie_threshold_range: Min=0.0, Max=20.0\n",
             "\n",
             "--- Starting Batch Processing with KDTree Pre-filtering ---\n",
-            "Found 1 PDB files in /content/cleaned\n",
+            "Found 32 PDB files in /content/cleaned\n",
             "🚀 Starting parallel processing with 6 workers...\n",
-            "🔄 Processing: 3tis.pdb\n",
-            "✅ Finished: 3tis.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj031_model_0.pdb🔄 Processing: fold_pwj015_real_model_0.pdb🔄 Processing: fold_pwj030_model_0.pdb🔄 Processing: fold_pwj004_model_0.pdb🔄 Processing: fold_pwj002_model_0.pdb\n",
+            "\n",
+            "\n",
+            "\n",
+            "\n",
+            "🔄 Processing: fold_pwj010_model_0.pdb\n",
+            "✅ Finished: fold_pwj004_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj013_model_0.pdb\n",
+            "✅ Finished: fold_pwj002_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj017_model_0.pdb\n",
+            "✅ Finished: fold_pwj015_real_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj023_model_0.pdb✅ Finished: fold_pwj013_model_0.pdb (Saved: 0 triads)\n",
+            "\n",
+            "🔄 Processing: fold_pwj024_model_0.pdb\n",
+            "✅ Finished: fold_pwj010_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj020_model_0.pdb\n",
+            "✅ Finished: fold_pwj030_model_0.pdb (Saved: 1 triads)\n",
+            "✅ Finished: fold_pwj031_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj006_model_0.pdb\n",
+            "🔄 Processing: fold_pwj003_model_0.pdb\n",
+            "✅ Finished: fold_pwj023_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj011_model_0.pdb\n",
+            "✅ Finished: fold_pwj017_model_0.pdb (Saved: 1 triads)✅ Finished: fold_pwj020_model_0.pdb (Saved: 1 triads)\n",
+            "\n",
+            "🔄 Processing: fold_pwj005_model_0.pdb🔄 Processing: fold_pwj014_model_0.pdb\n",
+            "\n",
+            "✅ Finished: fold_pwj011_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj026_model_0.pdb\n",
+            "✅ Finished: fold_pwj006_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj021_model_0.pdb\n",
+            "✅ Finished: fold_pwj024_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj027_model_0.pdb\n",
+            "✅ Finished: fold_pwj014_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj022_model_0.pdb\n",
+            "✅ Finished: fold_pwj005_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj016_model_0.pdb\n",
+            "✅ Finished: fold_pwj026_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj028_model_0.pdb\n",
+            "✅ Finished: fold_pwj003_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj007_model_0.pdb\n",
+            "✅ Finished: fold_pwj016_model_0.pdb (Saved: 2 triads)\n",
+            "🔄 Processing: fold_pwj018_model_0.pdb\n",
+            "✅ Finished: fold_pwj028_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj029_model_0.pdb\n",
+            "✅ Finished: fold_pwj027_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj008_model_0.pdb\n",
+            "✅ Finished: fold_pwj021_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj025_model_0.pdb\n",
+            "✅ Finished: fold_pwj022_model_0.pdb (Saved: 2 triads)\n",
+            "🔄 Processing: fold_pwj019_real_model_0.pdb\n",
+            "✅ Finished: fold_pwj018_model_0.pdb (Saved: 2 triads)\n",
+            "🔄 Processing: fold_pwj012_model_0.pdb\n",
+            "✅ Finished: fold_pwj008_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj032_model_0.pdb\n",
+            "✅ Finished: fold_pwj029_model_0.pdb (Saved: 1 triads)\n",
+            "🔄 Processing: fold_pwj009_model_0.pdb\n",
+            "✅ Finished: fold_pwj007_model_0.pdb (Saved: 0 triads)\n",
+            "🔄 Processing: fold_pwj033_model_0.pdb\n",
+            "✅ Finished: fold_pwj009_model_0.pdb (Saved: 0 triads)\n",
+            "✅ Finished: fold_pwj012_model_0.pdb (Saved: 1 triads)\n",
+            "✅ Finished: fold_pwj032_model_0.pdb (Saved: 1 triads)\n",
+            "✅ Finished: fold_pwj025_model_0.pdb (Saved: 1 triads)\n",
+            "✅ Finished: fold_pwj019_real_model_0.pdb (Saved: 1 triads)\n",
+            "✅ Finished: fold_pwj033_model_0.pdb (Saved: 1 triads)\n",
             "\n",
             "🎉 All processing finished.\n"
           ]
@@ -194,7 +261,7 @@
         "# Input directory containing PDB files to be processed\n",
         "Target_pdb_directory = \"/content/cleaned\" # @param {type:\"string\"}\n",
         "# Output directory where processed Excel files will be saved\n",
-        "Result1_excel_directory = \"/content/\" # @param {type:\"string\"}\n",
+        "Result1_excel_directory = \"/content/result/\" # @param {type:\"string\"}\n",
         "# Create the output directory if it doesn't exist\n",
         "os.makedirs(Result1_excel_directory, exist_ok=True)\n",
         "\n",
@@ -202,7 +269,7 @@
         "base_url = \"https://raw.githubusercontent.com/SNU-Songlab/Metal-Installer-code/main/Threshold\"\n",
         "Metal = 'Cu'  # @param [\"Zn\", \"Mn\", \"Cu\", \"Fe\"]\n",
         "Ligand = '2His_1Cys_only_for_Cu'  # @param [\"3His_only_for_Zn_Cu\", \"2His_1Asp_only_for_Zn_Mn_Fe\", \"2His_1Glu_only_for_Zn_Mn_Fe\", \"2His_1Cys_only_for_Cu\"]\n",
-        "Threshold = '5'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
+        "Threshold = '4'  # @param [\"1\", \"2\", \"3\", \"4\",\"5\"]\n",
         "thresholds_url = f\"{base_url}/{Metal}/{Ligand}/{Threshold}.xlsx\"\n",
         "thresholds_file = os.path.join(Result1_excel_directory, \"thresholds.xlsx\")\n",
         "\n",
@@ -417,7 +484,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "OmyrAVvhfbQl"
