Colab을 통해 생성됨

--- a/Metal_Installer.ipynb
+++ b/Metal_Installer.ipynb
@@ -18,29 +18,84 @@
     {
       "cell_type": "code",
       "source": [
-        "# @markdown # Step 1: Install all neccessary packages\n",
+        "# @markdown # Step 1A: Install Conda in Colab\n",
         "# @markdown Please make sure to select a runtime with **High-RAM** before running this step\n",
-        "# Install all necessary packages\n",
-        "!pip install biopython\n",
-        "!pip install --upgrade tqdm\n",
-        "!pip install -q condacolab\n",
+        "!pip -q install -U condacolab\n",
         "import condacolab\n",
-        "condacolab.install()\n",
+        "condacolab.install()"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "YPFCSbYcJOsI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown # Step 1B: Match your environment to Colab’s Python (3.12)\n",
         "\n",
-        "# Install PyMOL using Conda\n",
-        "!mamba install -c conda-forge pymol-open-source -y\n",
+        "import os, sys\n",
         "\n",
-        "# Import necessary modules\n",
+        "# 1) Remove any existing pin file (it can force the wrong Python)\n",
+        "pin_file = \"/usr/local/conda-meta/pinned\"\n",
+        "if os.path.exists(pin_file):\n",
+        "    os.remove(pin_file)\n",
+        "\n",
+        "# 2) Make Conda's base match the running kernel (3.12) and install deps\n",
+        "!mamba install -y -c conda-forge \"python=3.12\" \"pymol-open-source=3.1.0=py312*\" biopython tqdm\n",
+        "\n",
+        "# 3) Quick smoke test\n",
+        "print(\"Python:\", sys.version.split()[0])\n",
+        "try:\n",
+        "    import Bio, tqdm\n",
+        "    print(\"Biopython:\", Bio.__version__, \"| tqdm:\", tqdm.__version__)\n",
+        "except Exception as e:\n",
+        "    print(\"Biopython/tqdm import error:\", e)\n",
+        "\n",
+        "try:\n",
+        "    import pymol\n",
+        "    pymol.finish_launching(['pymol','-cq'])\n",
+        "    from pymol import cmd\n",
+        "    print(\"PyMOL OK. Version:\", cmd.get_version())\n",
+        "except Exception as e:\n",
+        "    print(\"PyMOL import/launch error:\", e)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "IBXYqLhBHmVp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown # Step 1C: Install all neccessary packages\n",
         "from Bio.PDB import PDBParser, Selection, NeighborSearch\n",
         "from Bio.PDB.Polypeptide import is_aa\n",
         "from tqdm import tqdm\n",
-        "import torch"
+        "\n",
+        "# Optional: PyMOL headless (only if you need cmd)\n",
+        "try:\n",
+        "    import pymol\n",
+        "    pymol.finish_launching(['pymol','-cq'])\n",
+        "    from pymol import cmd\n",
+        "except Exception as e:\n",
+        "    print(\"PyMOL not available yet:\", e)\n",
+        "\n",
+        "# Optional: Torch\n",
+        "try:\n",
+        "    import torch\n",
+        "except ImportError:\n",
+        "    print(\"torch not found. Install with: pip install torch  (or: mamba install -y -c pytorch pytorch)\")\n"
       ],
       "metadata": {
-        "id": "VoBSGegKg_Lz",
-        "cellView": "form"
+        "cellView": "form",
+        "id": "HGNke-geJZd2"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,10 +115,10 @@
         "#@markdown **Note:** Specify the paths to the input and output PDB files below.\n",
         "\n",
         "#@markdown ### Enter the path to your input PDB file:\n",
-        "pdb_file_path = \"/content/8hxe.pdb\"  #@param {type:\"string\"}\n",
+        "pdb_file_path = \"/content/3tis.pdb\"  #@param {type:\"string\"}\n",
         "\n",
         "#@markdown ### Enter the path to your output PDB file:\n",
-        "Output_file_path = \"/content/8hxe_alanine.pdb\"  #@param {type:\"string\"}\n",
+        "Output_file_path = \"/content/3tis_alanine.pdb\"  #@param {type:\"string\"}\n",
         "\n",
         "# Create an instance of the PyMOL session\n",
         "with pymol2.PyMOL() as pymol:\n",
@@ -119,7 +174,7 @@
         "\n",
         "# --- Configuration ---\n",
         "# Specify the SINGLE PDB file path\n",
-        "Target_pdb_file = \"/content/8hxe_alanine.pdb\" # @param {type:\"string\"}\n",
+        "Target_pdb_file = \"/content/3tis_alanine.pdb\" # @param {type:\"string\"}\n",
         "\n",
         "# Specify Specific Residue Number\n",
         "# @markdown ### Find triad containing at least one following residue number.\n",
@@ -130,7 +185,7 @@
         "Starting_residue_number = 100  # @param {type:\"integer\"} #starting residue\n",
         "Last_residue_number = 150    # @param {type:\"integer\"} #last residue number\n",
         "# --- Specify Exact Output Excel File Path ---\n",
-        "Output_excel_file_path_result1 = \"/content/8hxe_alanine_3His.xlsx\"# @param {type:\"string\"}\n",
+        "Output_excel_file_path_result1 = \"/content/3tis_alanine_3His.xlsx\"# @param {type:\"string\"}\n",
         "\n",
         "# --- Determine Output Directory from Output File Path ---\n",
         "output_directory = os.path.dirname(Output_excel_file_path_result1)\n",
@@ -501,7 +556,7 @@
         "\n",
         "# --- Configuration ---\n",
         "# Specify the SINGLE PDB file path\n",
-        "Target_pdb_file = \"/content/8hxe_alanine.pdb\" # @param {type:\"string\"}\n",
+        "Target_pdb_file = \"/content/3tis_alanine.pdb\" # @param {type:\"string\"}\n",
         "\n",
         "# Specify Specific Residue Number\n",
         "# @markdown ### Find triad containing at least one following residue number.\n",
@@ -512,7 +567,7 @@
         "Starting_residue_number = 100  # @param {type:\"integer\"} #starting residue\n",
         "Last_residue_number = 180    # @param {type:\"integer\"} #last residue number\n",
         "# --- Specify Exact Output Excel File Path ---\n",
-        "Output_excel_file_path_result1 = \"/content/8hxe_alanine_3His.xlsx\"# @param {type:\"string\"}\n",
+        "Output_excel_file_path_result1 = \"/content/3tis_alanine_3His.xlsx\"# @param {type:\"string\"}\n",
         "\n",
         "# --- Determine Output Directory from Output File Path ---\n",
         "output_directory = os.path.dirname(Output_excel_file_path_result1)\n",
@@ -863,9 +918,9 @@
         "# --- Configuration and Setup ---\n",
         "# Define paths for the SINGLE input coordinate Excel file and the corresponding PDB file\n",
         "\n",
-        "Input_result1_excel_file = '/content/8hxe_alanine_3His.xlsx'  # @param {type:\"string\"}\n",
-        "Input_pdb_file = '/content/8hxe_alanine.pdb'  # @param {type:\"string\"}\n",
-        "Output_result2_excel_file = '/content/8hxe_alanine_3His_result.xlsx'  # @param {type:\"string\"}\n",
+        "Input_result1_excel_file = '/content/3tis_alanine_3His.xlsx'  # @param {type:\"string\"}\n",
+        "Input_pdb_file = '/content/3tis_alanine.pdb'  # @param {type:\"string\"}\n",
+        "Output_result2_excel_file = '/content/3tis_alanine_3His_result.xlsx'  # @param {type:\"string\"}\n",
         "\n",
         "# Create output directory if it doesn't exist\n",
         "output_result_directory = os.path.dirname(Output_result2_excel_file)\n",
@@ -1362,7 +1417,7 @@
         "# @markdown # Step 5: Analyze output\n",
         "\n",
         "# Load input file\n",
-        "input_result2_file_path = \"/content/8hxe_alanine_3His_result.xlsx\" # @param {type:\"string\"}\n",
+        "input_result2_file_path = \"/content/3tis_alanine_3His_result.xlsx\" # @param {type:\"string\"}\n",
         "df_new = pd.read_excel(input_result2_file_path)\n",
         "\n",
         "# Generate PyMOL script file\n",
@@ -1400,7 +1455,7 @@
         "        pymol_script_commands.append(f\"# {selection_name} does not bind Zn\")\n",
         "\n",
         "# Save the commands into a PyMOL script\n",
-        "pymol_script_file = \"/content/8hxe_alanine_3His_result.pml\" # @param {type:\"string\"}\n",
+        "pymol_script_file = \"/content/3tis_alanine_3His_result.pml\" # @param {type:\"string\"}\n",
         "with open(pymol_script_file, 'w') as f:\n",
         "    f.write(\"# PyMOL script for visualizing both Zn-binding and non-binding residue combinations\\n\\n\")\n",
         "    for command in pymol_script_commands:\n",
